# 4-sem

./: README.md
lab1/: CMakeLists.txt  dragon.cpp  torus.cpp
